[package]
name = "isready"
version = "0.2.0"
edition = "2024"
description = "A per-project dev environment health checker"
license = "Apache-2.0"
repository = "https://github.com/alexdev-tb/isready"
readme = "README.md"
keywords = ["cli", "developer-tools", "health-check", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
colored = "3.1.1"
port_check = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"